2011-04-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSNumberFormatter.m: Move the body of -init to a method called
	-_NSNumberFormatterInit, and call this in -initWithCoder: so that
	instances created with -initWithCoder: are initialized correctly.

2011-04-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/Foundation/NSObjCRuntime.h: Add CGFLOAT_MIN and CGFLOAT_MAX

2011-04-14  Adam Fedor  <fedor@gnu.org>

	* VERSION: Bump version

2011-04-14  Adam Fedor  <fedor@gnu.org>

	* Version 1.22.0

2011-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m (GSSelectorFromNameAndTypes):
	Comment out case for __GNU_LIBOBJC__ to avoid breakage with gcc-4.6
	* Source/NSPathUtilities.m: Minor tweak for running testcases.
	* Tests/base/NSBundle/resources.m:
	* Tests/base/NSBundle/basic.m:
	Skip gnustep library bundle tests if not installed.
	* Tests/base/NSNumberFormatter/basic.m:
	Changed a test to a hope for the next release

2011-04-10  Quentin Mathe <quentin.mathe@gmail.com>

	* Tools/AGSOutput.m (-fitWords:from:to:maxSize:output:): Ensure all 
	paragraphs are output in the same way. Each paragraph starts on a new 
	line now, which results in a GSDoc output that looks a bit better and 
	is easier to parse.

2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/Additions/GSObjCRuntime.m (GSSelectorFromNameAndTypes):
	Uncommented case for __GNU_LIBOBJC__.

2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Updated the checks to enable native Objective-C
	exceptions.  If native exceptions were enabled in gnustep-make -
	because the compiler supports them -, but are disabled here
	because there is no uncaught exception handler in the runtime,
	print an explanation without aborting; we now disable them via
	base.make.
	* configure: Regnerated.
	* base.make.in: Set USE_OBJC_EXCEPTIONS to no if we disabled
	native exceptions when configuring.
	